Add gfx power and screen swap functions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
     "rust-analyzer.checkOnSave.allTargets": false,
-    "rust-analyzer.cargo.target": "thumbv5te-none-eabi.json"
+    "rust-analyzer.cargo.target": "thumbv5te-none-eabi.json",
+    "rust-analyzer.cargo.features": [
+        "arm9"
+    ]
 }
