--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 voladdress = { version = "1" }
 bitflags = { version = "1.3" }
+modular-bitfield = { version = "0.11" }
 
 [features]
 arm9 = []
