--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "rust-analyzer.checkOnSave.allTargets": false,
-    "rust-analyzer.cargo.target": "thumbv5te-none-eabi.json",
+    "rust-analyzer.cargo.target": "thumbv5te-none-eabi",
     "rust-analyzer.cargo.features": [
         "arm9"
     ],
