--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -3,4 +3,4 @@ target = "thumbv5te-none-eabi"
 [unstable]
 build-std = ["core", "alloc"]
 [target.thumbv5te-none-eabi]
-rustflags = ["-Clink-arg=-Tarm9_link.ld"]
+rustflags = ["-Clink-arg=-Tarm9_link.ld", "-Ctarget-cpu=arm946e-s"]
