rust-analyzer check on save notes
don't know if the extra args matter?

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
+    // needed for no-std, prevents the "can't find crate for 'test'" issue
     "rust-analyzer.checkOnSave.allTargets": false,
+    "rust-analyzer.checkOnSave.extraArgs": [
+        "--lib"
+    ],
     "rust-analyzer.cargo.target": "thumbv5te-none-eabi",
     "rust-analyzer.cargo.features": [
         "arm9"
