--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ publish = false # remove this when adding to crates.io
 
 [dependencies]
 voladdress = { version = "1" }
-bitflags = { version = "1.3" }
+bitflags = { version = "2.0.0-rc.2" }
 modular-bitfield = { version = "0.11" }
 
 [features]
