--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,8 @@ publish = false # remove this when adding to crates.io
 
 [dependencies]
 voladdress = { version = "1" }
-bitflags = { version = "2.0.0-rc.2" }
-modular-bitfield = { version = "0.11" }
+bitflags = { version = "2.0.0-rc.3" }
+bitfield-struct = "0.3"
 
 [features]
 arm9 = []
